maven-debian-helper (2.0~exp2) UNRELEASED; urgency=medium

  * Team upload.
  * Added a dependency on libmaven-deploy-plugin-java to fix
    a build failure with some packages like avro-java.

 -- Emmanuel Bourg <ebourg@apache.org>  Mon, 23 Nov 2015 22:57:59 +0100

maven-debian-helper (2.0~exp1) experimental; urgency=medium

  * Team upload.
  * Update Maven to version 3.3
    - Remove nodocs build due to Maven 3 update
    - Generate maven metadata when copying maven repo for building
  * Update SysInstallMojo to wait for symlinks to finish

 -- Andrew Schurman <arcticwaters@gmail.com>  Fri, 13 Nov 2015 16:06:38 +0100

maven-debian-helper (1.7) unstable; urgency=medium

  * Ignore the 'maven clean' errors when building with debhelper
  * Do not run the tests when DEB_BUILD_OPTIONS=nocheck is specified
    (Closes: #737988)
  * Changed the debian/rules template to use DH by default instead of CDBS.
    A rules file using CDBS can still be generated by adding the --cdbs
    parameter to mh_make (Closes: #786340)
  * Generate debian/watch for GitHub projects
  * Added animal-sniffer-maven-plugin to the ignored plugins

 -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Nov 2015 19:18:51 +0100

maven-debian-helper (1.6.13) unstable; urgency=medium

  * Don't install the documentation jar by default (Closes: #711852)

 -- Emmanuel Bourg <ebourg@apache.org>  Tue, 29 Sep 2015 17:35:10 +0200

maven-debian-helper (1.6.12) unstable; urgency=medium

  * Set the locale to en_US when generating the javadoc
    to make the builds reproducible

 -- Emmanuel Bourg <ebourg@apache.org>  Fri, 19 Jun 2015 23:59:50 +0200

maven-debian-helper (1.6.11) unstable; urgency=medium

  * Upload to unstable
  * Removed the timestamp from the javadoc files to make the builds reproducible
  * Export the DEB_CHANGELOG_DATETIME variable with the date of the latest entry
    in debian/changelog
  * Accept libmaven-compiler-plugin-java (<< 3.0) as an alternative dependency
