@@ -3,6 +3,7 @@ maven-debian-helper (2.0~exp2) UNRELEASED; urgency=medium
   * Team upload.
   * Added a dependency on libmaven-deploy-plugin-java to fix
     a build failure with some packages like avro-java.
+  * Remove the target directories even if 'mvn clean' fails when using DH
 
  -- Emmanuel Bourg <ebourg@apache.org>  Mon, 23 Nov 2015 22:57:59 +0100
 
